--- a/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
+++ b/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
@@ -68,6 +68,9 @@
   <ItemGroup>
     <Compile Include="%28conventions%29\StringConventionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Range\Int16RangeTests.cs" />
+    <Compile Include="Range\Int32RangeTests.cs" />
+    <Compile Include="Range\Int64RangeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kf.Core\Kf.Core.csproj">
