--- a/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
+++ b/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
@@ -67,6 +67,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="%28conventions%29\StringConventionsTests.cs" />
+    <Compile Include="%28helpers%29\System\FriendlyTypeNameHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range\DateTimeRangeTests.cs" />
     <Compile Include="Range\Int16RangeTests.cs" />
