--- a/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
+++ b/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
@@ -67,6 +67,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="%28conventions%29\StringConventionsTests.cs" />
+    <Compile Include="%28extensions%29\System\DateTimeExtensionsTests.cs" />
     <Compile Include="%28helpers%29\System\FriendlyTypeNameHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range\DateTimeRangeTests.cs" />
@@ -84,9 +85,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="%28extensions%29\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
