Added tests for TypeExtensions (ToFriendlyName).

--- a/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
+++ b/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="%28conventions%29\StringConventionsTests.cs" />
     <Compile Include="%28extensions%29\System\DateTimeExtensionsTests.cs" />
+    <Compile Include="%28extensions%29\System\TypeExtensionsTests.cs" />
     <Compile Include="%28helpers%29\System\FriendlyTypeNameHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range\DateTimeRangeTests.cs" />
