--- a/Source/Kf.Core/Kf.Core.csproj
+++ b/Source/Kf.Core/Kf.Core.csproj
@@ -38,8 +38,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="%28conventions%29\StringConventions.cs" />
+    <Compile Include="%28extensions%29\Collections\IEnumerableOfStringExtensions.cs" />
     <Compile Include="%28extensions%29\Range\IRangeExtensions.cs" />
     <Compile Include="%28extensions%29\System\DateTimeExtensions.cs" />
+    <Compile Include="%28extensions%29\System\ObjectExtensions.cs" />
     <Compile Include="%28extensions%29\System\TypeExtensions.cs" />
     <Compile Include="%28helpers%29\System\FriendlyTypeNameHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
