Added ObjectExtensions and StringExtensions. With tests for ObjectExtensions. TODOD, add StringExtensions tests and add extra functionality.

--- a/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
+++ b/Source/Kf.Core.Tests/Kf.Core.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="%28conventions%29\StringConventionsTests.cs" />
     <Compile Include="%28extensions%29\Collections\IEnumerableOfStringExtensionsTests.cs" />
     <Compile Include="%28extensions%29\System\DateTimeExtensionsTests.cs" />
+    <Compile Include="%28extensions%29\System\ObjectExtensionsTests.cs" />
     <Compile Include="%28extensions%29\System\TypeExtensionsTests.cs" />
     <Compile Include="%28helpers%29\System\FriendlyTypeNameHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
