--- a/Source/Kf.Core/Kf.Core.csproj
+++ b/Source/Kf.Core/Kf.Core.csproj
@@ -38,6 +38,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="%28conventions%29\StringConventions.cs" />
+    <Compile Include="%28conventions%29\Timestamping\Interfaces\ITimestampFormatDeterminer.cs" />
+    <Compile Include="%28conventions%29\Timestamping\Interfaces\ITimestampFormatParser.cs" />
+    <Compile Include="%28conventions%29\Timestamping\Interfaces\ITimestampFormatter.cs" />
+    <Compile Include="%28conventions%29\Timestamping\TimestampFormat.cs" />
     <Compile Include="%28extensions%29\Collections\IEnumerableOfStringExtensions.cs" />
     <Compile Include="%28extensions%29\Range\IRangeExtensions.cs" />
     <Compile Include="%28extensions%29\System\DateTimeExtensions.cs" />
