--- a/Source/Kf.Core/Kf.Core.csproj
+++ b/Source/Kf.Core/Kf.Core.csproj
@@ -38,11 +38,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="%28conventions%29\StringConventions.cs" />
+    <Compile Include="%28conventions%29\Timestamping\DefaultConvention\DefaultTimestampFormatDeterminer.cs" />
+    <Compile Include="%28conventions%29\Timestamping\DefaultConvention\DefaultTimestampFormatter.cs" />
+    <Compile Include="%28conventions%29\Timestamping\DefaultConvention\DefaultTimestampParser.cs" />
     <Compile Include="%28conventions%29\Timestamping\Exceptions\TimestampException.cs" />
     <Compile Include="%28conventions%29\Timestamping\Exceptions\UnknownTimestampFormatException.cs" />
     <Compile Include="%28conventions%29\Timestamping\Interfaces\ITimestampFormatDeterminer.cs" />
-    <Compile Include="%28conventions%29\Timestamping\Interfaces\ITimestampFormatParser.cs" />
+    <Compile Include="%28conventions%29\Timestamping\Interfaces\ITimestampParser.cs" />
     <Compile Include="%28conventions%29\Timestamping\Interfaces\ITimestampFormatter.cs" />
+    <Compile Include="%28conventions%29\Timestamping\Interfaces\TimestampFormatDeterminer.cs" />
+    <Compile Include="%28conventions%29\Timestamping\Interfaces\TimestampFormatter.cs" />
+    <Compile Include="%28conventions%29\Timestamping\Interfaces\TimestampParser.cs" />
     <Compile Include="%28conventions%29\Timestamping\TimestampFormat.cs" />
     <Compile Include="%28extensions%29\Collections\IEnumerableOfStringExtensions.cs" />
     <Compile Include="%28extensions%29\Range\IRangeExtensions.cs" />
