--- a/Source/Kf.Core/Kf.Core.csproj
+++ b/Source/Kf.Core/Kf.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="%28extensions%29\System\StringExtensions.cs" />
     <Compile Include="%28extensions%29\System\TypeExtensions.cs" />
     <Compile Include="%28helpers%29\System\FriendlyTypeNameHelper.cs" />
+    <Compile Include="IO\SizeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range\DateTimeRange.cs" />
     <Compile Include="Range\ImmtuableRange.cs" />
